--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://Namehfeej.github.io/curso-react-intro"
+  "homepage": "https://Namehfeej.github.io/curso-react-intro-todo"
 }
